--- a/mobile.css
+++ b/mobile.css
@@ -26,6 +26,7 @@ h1{
 }
 
 #donut{
+    z-index: 1000;
   position: fixed;
   top: 20%;
   right: 40%;
