--- a/tablet.css
+++ b/tablet.css
@@ -25,6 +25,7 @@ h1{
 }
 
 #donut{
+    z-index: 1000;
   position: fixed;
   top: 20%;
   right: 40%;
